2008-12-01  Modestas Vainius  <modestas@vainius.eu>

	* scripts/dpkg-shlibdeps.pl: Don't merge all dependency templates
	into the generated dependency when Build-Depends-Package is
	used in the symbols file. Instead simply modify the minimal
	version on any pre-existing dependency.

2008-11-19  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/Objdump.pm (parse_dynamic_symbol): Fix the
	regular expression to not require two space between alignment and
	symbol name.
	* scripts/t/200_Dpkg_Shlibs.t,
	scripts/t/200_Dpkg_Shlibs/objdump.ls: Add a non-regression test
	corresponding to the above case.

2008-11-18  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.24~.

2008-11-18  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.23.

2008-11-14  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (run_error_handler): In case of onerr_abort print an
	error message and exit, otherwise longjmp.

2008-11-14  Guillem Jover  <guillem@debian.org>

	* src/main.h (abort_processing): New variable declaration.
	* src/errors.c (abort_processing): New variable definition.
	* src/archives.c (print_error_perpackage): Use abort_processing
	instead of onerr_abort for non fatal errors.
	(reportbroken_retexitstatus): Likewise. Do not check onerr_abort
	for the exit value as it should not have reached this function.
	* src/packages.c (process_queue): Likewise. Return on entering if
	it should abort processing.

2008-11-14  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (run_error_handler): New function.
	(push_error_handler): Use run_error_handler instead of directly
	calling longjmp.
	(ohshit): Likewise.
	(ohshitvb): Likewise.
	(ohshitv): Likewise.
	(ohshite): Likewise.

2008-11-07  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Version.pm: Synchronize code with version used by
	debbugs (add some bugfixes).
	* scripts/t/900_Dpkg_Version.t: Add non-regression tests for
	version comparison code.