@@ -7,6 +7,9 @@ dpkg (1.14.24) UNRELEASED; urgency=low
     symbols file. It was merging all dependency templates into the generated
     dependency instead of simply modifying the minimal version. Thanks to
     Modestas Vainius <modestas@vainius.eu>. Closes: #507346
+  * Fix dpkg-source to correctly extract a source package even when called
+    from a non-writable directory when a target directory has been specified
+    on the command line. Closes: #507217, #507219
 
  -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
 
